code/typescript/FactSetTickHistory/v2/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# FactSet Tick History client library for JavaScript

[![npm](https://img.shields.io/npm/v/@factset/sdk-factsettickhistory)](https://www.npmjs.com/package/@factset/sdk-factsettickhistory)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

Tick History provides dynamic access to historical tick data for a specific security for specific dates or date range.

This TypeScript/JavaScript package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 2.1.0
- Package version: 0.31.0
- Build package: com.factset.sdk.codegen.FactSetJavascriptClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* Node.js >= 14

## Installation

### npm

```shell
npm install @factset/sdk-utils @factset/sdk-factsettickhistory@0.31.0
```

### yarn

```shell
yarn add @factset/sdk-utils @factset/sdk-factsettickhistory@0.31.0
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Node.js environment
   1. Install and activate Node.js >=14. If you're using [nvm](https://github.com/nvm-sh/nvm):

      ```sh
      nvm install 16
      nvm use 16
      ```

   2. (optional) [Install yarn](https://yarnpkg.com/getting-started/install).
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code


```javascript
const { ApiClient, Level1Api } = require('@factset/sdk-factsettickhistory');
const { ConfidentialClient } = require('@factset/sdk-utils');

const apiClient = ApiClient.instance;

// Examples for each supported authentication method are below,
// choose one that satisfies your use case.

// (Preferred) OAuth 2.0: FactSetOAuth2
// See https://github.com/FactSet/enterprise-sdk#oauth-20
// for information on how to create the app-config.json file
//
// The confidential client instance should be reused in production environments.
// See https://github.com/FactSet/enterprise-sdk-utils-typescript#authentication
// for more information on using the ConfidentialClient class
apiClient.factsetOauth2Client = new ConfidentialClient('/path/to/app-config.json');

// Basic authentication: FactSetApiKey
// See https://github.com/FactSet/enterprise-sdk#api-key
// for information how to create an API key
// const FactSetApiKey = apiClient.authentications['FactSetApiKey'];
// FactSetApiKey.username = 'USERNAME-SERIAL';
// FactSetApiKey.password = 'API-KEY';

const apiInstance = new Level1Api();
const id = "id_example"; // String | id returned by files create endpoint to poll and collect status of the query

// Call api endpoint
apiInstance.getLevel1FileStatus(id).then(
  data => {

      // data is a responsewrapper: GetLevel1FileStatusResponseWrapper
      switch (data.statusCode) {

          case 201:
             // CompletedResponse
             console.log(data.getResponse201());
             break;

          case 202:
             // SubmittedResponse
             console.log(data.getResponse202());
             break;

      }

  },
  error => {
    console.error(error);
  },
);

```


## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com/tick-history/v2*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*factsettickhistory.Level1Api* | [**getLevel1FileStatus**](docs/Level1Api.md#getLevel1FileStatus) | **GET** /level1/files/status | Returns the status of the ID
*factsettickhistory.Level1Api* | [**getMinutebarsFileStatus**](docs/Level1Api.md#getMinutebarsFileStatus) | **GET** /level1/files/minute-bars/status | Returns the status of the ID
*factsettickhistory.Level1Api* | [**getMinutebarsFiles**](docs/Level1Api.md#getMinutebarsFiles) | **GET** /level1/files/minute-bars/get | Returns the Minute bars data in files requested in the /create endpoint
*factsettickhistory.Level1Api* | [**getTickHistoryLevel1Files**](docs/Level1Api.md#getTickHistoryLevel1Files) | **GET** /level1/files/get | Returns the tick-by-tick data in files requested in the /create endpoint
*factsettickhistory.Level1Api* | [**requestMinutebarsFiles**](docs/Level1Api.md#requestMinutebarsFiles) | **POST** /level1/files/minute-bars/create | Requests the creation of Minute bars file
*factsettickhistory.Level1Api* | [**requestTickHistoryCoverage**](docs/Level1Api.md#requestTickHistoryCoverage) | **GET** /level1/coverage | Returns the coverage for the requested ticker/isin along with other response fields for Level1 data.
*factsettickhistory.Level1Api* | [**requestTickHistoryLevel1Files**](docs/Level1Api.md#requestTickHistoryLevel1Files) | **POST** /level1/files/create | Requests the creation of tick-by-tick file
*factsettickhistory.Level2Api* | [**getLevel2FileStatus**](docs/Level2Api.md#getLevel2FileStatus) | **GET** /level2/files/status | Returns the status of the ID
*factsettickhistory.Level2Api* | [**getTickHistoryLevel2Files**](docs/Level2Api.md#getTickHistoryLevel2Files) | **GET** /level2/files/get | Returns the tick history files requested in the /create endpoint
*factsettickhistory.Level2Api* | [**requestTickHistoryLeve2Files**](docs/Level2Api.md#requestTickHistoryLeve2Files) | **POST** /level2/files/create | Returns the ID for the requested data.


## Documentation for Models

 - [factsettickhistory.CheckFiles](docs/CheckFiles.md)
 - [factsettickhistory.CompletedResponse](docs/CompletedResponse.md)
 - [factsettickhistory.CoverageResponse](docs/CoverageResponse.md)
 - [factsettickhistory.CoverageTickHistory](docs/CoverageTickHistory.md)
 - [factsettickhistory.DateRangeOne](docs/DateRangeOne.md)
 - [factsettickhistory.DateTimePeriod](docs/DateTimePeriod.md)
 - [factsettickhistory.DateTimePeriodMin](docs/DateTimePeriodMin.md)
 - [factsettickhistory.ErrorExample](docs/ErrorExample.md)
 - [factsettickhistory.ErrorObject](docs/ErrorObject.md)
 - [factsettickhistory.Files](docs/Files.md)
 - [factsettickhistory.FilesOne](docs/FilesOne.md)
 - [factsettickhistory.GetFilesMinuteResponse](docs/GetFilesMinuteResponse.md)
 - [factsettickhistory.GetFilesResponse](docs/GetFilesResponse.md)
 - [factsettickhistory.Granularity](docs/Granularity.md)
 - [factsettickhistory.Level1RequestBody](docs/Level1RequestBody.md)
 - [factsettickhistory.Level2RequestBody](docs/Level2RequestBody.md)
 - [factsettickhistory.LevelTwoRequest](docs/LevelTwoRequest.md)
 - [factsettickhistory.LeveloneRequest](docs/LeveloneRequest.md)
 - [factsettickhistory.LeveltwoGetFilesResponse](docs/LeveltwoGetFilesResponse.md)
 - [factsettickhistory.Meta](docs/Meta.md)
 - [factsettickhistory.MinRequest](docs/MinRequest.md)
 - [factsettickhistory.MinTickData](docs/MinTickData.md)
 - [factsettickhistory.MinutesbarRequestBody](docs/MinutesbarRequestBody.md)
 - [factsettickhistory.Pagination](docs/Pagination.md)
 - [factsettickhistory.ResponseFileType](docs/ResponseFileType.md)
 - [factsettickhistory.Status](docs/Status.md)
 - [factsettickhistory.StatusOne](docs/StatusOne.md)
 - [factsettickhistory.SubmittedResponse](docs/SubmittedResponse.md)
 - [factsettickhistory.TickData](docs/TickData.md)
 - [factsettickhistory.TickDataLevel2](docs/TickDataLevel2.md)
 - [factsettickhistory.Type](docs/Type.md)


## Documentation for Authorization



### FactSetApiKey

- **Type**: HTTP basic authentication



### FactSetOAuth2


- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


# Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

# Copyright

Copyright 2022 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
